@@ -20,6 +20,7 @@ version <next>:
 - Dynamic Audio Normalizer as dynaudnorm filter
 - Reverse filter
 - Random filter
+- deband filter
 
 
 version 2.7:
